(refactor) Add module access info to test classes